# happy-gardenpi-app

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_local.txt  CROSS_COMPILE.md  Doxyfile  Doxyfile.dox  LICENSE  LICENSE_SHORT  README.md  TODO.md  build.sh  config.h.in  config.json  happy-gardenpi-app.code-workspace  hhg-config.h.in  hhg-parser-config.h.in  osal-config.h.in  valgrind_check.sh
HappyGardenPI/: HappyGardenPI.sln  HappyGardenPI.vcxproj  main.cpp
app/: CMakeLists.txt  config.h.in
app/inc/hhg-app/: appdata.hpp  appjson.hpp  appmain.hpp  appmainfsm.hpp  config.h  header.hpp
app/src/: appdata.cpp  appjson.cpp  appmain.cpp  appmainfsm.cpp  main.cpp  source.cpp
cJSON/: CMakeLists.txt
cert/: README.md
docs/html/: _c_r_o_s_s___c_o_m_p_i_l_e_8md.html  _r_e_a_d_m_e_8md.html  aggregation_8cpp.html  aggregation_8hpp.html  aggregation_8hpp_source.html  aggregationdao_8cpp.html  aggregationdao_8hpp.html  aggregationdao_8hpp_source.html  annotated.html  button_8hpp.html  button_8hpp_source.html  buttonconcrete_8cpp.html  buttonconcrete_8hpp.html  buttonconcrete_8hpp_source.html  classes.html  classhgardenpi_1_1v1_1_1_aggregation_d_a_o-members.html  classhgardenpi_1_1v1_1_1_aggregation_d_a_o.html  classhgardenpi_1_1v1_1_1_button-members.html  classhgardenpi_1_1v1_1_1_button.html  classhgardenpi_1_1v1_1_1_button_concrete-members.html  classhgardenpi_1_1v1_1_1_button_concrete.html  classhgardenpi_1_1v1_1_1_closeable-members.html  classhgardenpi_1_1v1_1_1_closeable.html  classhgardenpi_1_1v1_1_1_config_serivce-members.html  classhgardenpi_1_1v1_1_1_config_serivce.html  classhgardenpi_1_1v1_1_1_config_service-members.html  classhgardenpi_1_1v1_1_1_config_service.html  classhgardenpi_1_1v1_1_1_config_service_concrete-members.html  classhgardenpi_1_1v1_1_1_config_service_concrete.html  classhgardenpi_1_1v1_1_1_d_a_o-members.html  classhgardenpi_1_1v1_1_1_d_a_o.html  classhgardenpi_1_1v1_1_1_database-members.html  classhgardenpi_1_1v1_1_1_database.html  classhgardenpi_1_1v1_1_1_database_factory-members.html  classhgardenpi_1_1v1_1_1_database_factory.html  classhgardenpi_1_1v1_1_1_device-members.html  classhgardenpi_1_1v1_1_1_device.html  classhgardenpi_1_1v1_1_1_device_concrete-members.html  classhgardenpi_1_1v1_1_1_device_concrete.html  classhgardenpi_1_1v1_1_1_display-members.html  (+258 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  (+113 more)
freertos/: CMakeLists.txt
hhg-app/: CMakeLists.txt
hhg-app/src/: app-config.cpp  app-data.cpp  app-display-auth.cpp  app-display-handler.cpp  app-display-irrigate-now.cpp  app-display-keyboard.cpp  app-display-menu.cpp  app-display-passwd.cpp  app-display-wifi.cpp  app-led.cpp  app-main.cpp  app-mqtt.cpp  app-parser-commands.cpp  app-parser.cpp  appdata.cpp  appjson.cpp  appmain.cpp  appparser.cpp
hhg-config/: FreeRTOSConfig.h  hhg-config.h
hhg-config/pico/: FreeRTOSConfig.h  hhg-config.h  hhg-parser-config.h  lwipopts.h  osal-config.h
hhg-driver/platform/: lcd.cpp
hhg-drivers/src/: foo.cpp
hhg-intf/src/: zoo.cpp
hhg-utils/src/: hhg-utils.cpp
inc/: app_main.h  config.h  errors.hpp  hhg-config.h  main.h  osal-config.h
inc/asset/: font_5x8.hpp  font_8x8.hpp  ic_wifi_off.hpp  ic_wifi_on.hpp
inc/assets/: font_12x16.hpp  font_16x32.hpp  font_5x8.hpp  font_8x8.hpp  font_test.hpp  ic_skeleton.hpp  ic_wifi_off.hpp  ic_wifi_on.hpp
inc/hhg/: config.h  main.h
interfaces/: CMakeLists.txt  config.h.in
interfaces/inc/hhg-intf/: button.hpp  config.h  data.hpp  hardware.hpp  lcd.hpp  led.hpp  releay.hpp  rtc.hpp
interfaces/src/: foo.cpp  source.cpp
pico/: memmap_default.ld
pico-ssd1306/: ssd1306.cpp  ssd1306.h
pico-ssd1306/frameBuffer/: FrameBuffer.cpp
scripts/: data_test.minicom  quick_commands.txt
src/: app_main.cpp  clientengine.cpp  clientengine.hpp  commons.cpp  constants.cpp  constants.hpp  engine.cpp  engine.hpp  globals.cpp  globals.hpp  hhg-main.cpp  hhgmain.cpp  main.cpp  scheduler.cpp  scheduler.hpp  threadengine.cpp  threadengine.hpp
src/clients/: database.hpp  databasefactory.cpp  databasefactory.hpp  mqttclient.cpp  mqttclient.hpp  mqttclientlocalsub.cpp  mqttclientlocalsub.hpp  mqttclientmosquitto.cpp  mqttclientmosquitto.hpp  resultset.hpp  sqlite3database.cpp  sqlite3database.hpp  sqlite3resultset.cpp  sqlite3resultset.hpp
src/components/: button.hpp  buttonconcrete.cpp  buttonconcrete.hpp  display.hpp  lcd1602.cpp  lcd1602.hpp  relaymodule.hpp  relaymodule4channel.cpp  relaymodule4channel.hpp
src/controllers/: mqttclient.cpp  mqttclient.hpp  pidcheck.hpp  scheduler.cpp  scheduler.hpp
src/daos/: aggregationdao.cpp  aggregationdao.hpp  dao.hpp  stationdao.cpp  stationdao.hpp
src/factories/: communication.hpp  communicationconcrete.cpp  communicationconcrete.hpp  device.hpp  deviceconcrete.cpp  deviceconcrete.hpp  factory.hpp  factoryconcrete.cpp  factoryconcrete.hpp  system.hpp  systemconcrete.cpp  systemconcrete.hpp
src/interfaces/: closeable.hpp  initializable.hpp  loggable.hpp  loopable.hpp  mqttclient.hpp  object.hpp  releasable.hpp  singleton.hpp  startable.hpp  stoppable.hpp
src/services/: configservice.cpp  configservice.hpp  configserviceconcrete.cpp  configserviceconcrete.hpp  deviceservice.cpp  deviceservice.hpp  lockservice.cpp  lockservice.hpp  lockserviceconcrete.cpp  lockserviceconcrete.hpp  logservice.cpp  logservice.hpp  logserviceconcrete.cpp  logserviceconcrete.hpp  paramsservice.cpp  scheduler.hpp  schedulerconcrete.cpp  schedulerconcrete.hpp
src/utilities/: databaseutils.cpp  databaseutils.hpp  object.hpp  singleton.hpp  stringutils.cpp  stringutils.hpp  threadpool.cpp  threadpool.hpp  threadutils.cpp  threadutils.hpp  types.cpp  types.hpp  variant.cpp  variant.hpp
stm32cubeide/: .cproject  .project  stm32cubeide.ioc
stm32cubeide-workspace/.metadata/: .log4j2.xml  version.ini
stm32cubeide-workspace/stm32cubeide/: .cproject  .mxproject  .project  hi-happy-garden-app Debug.launch  hi-happy-garden-app.ioc  stm32cubeide Debug.launch  stm32cubeide.ioc
stm32cubeide/Debug/: makefile  stm32cubeide.elf  stm32cubeide.list  stm32cubeide.map
test/: foo.cpp
(+218 files in other folders)
